--- a/tienda_1/src/main/resources/messages.properties
+++ b/tienda_1/src/main/resources/messages.properties
@@ -83,3 +83,4 @@ usuario.password=Contrase\u00f1a
 usuario.telefono=Tel\u00e9fono
 usuario.total=Total Usuarios
 usuario.username=Usuario
+producto.rutaImagen=rutaImagen
