--- a/tienda_1/src/main/resources/messages_en.properties
+++ b/tienda_1/src/main/resources/messages_en.properties
@@ -82,3 +82,4 @@ usuario.password=Password
 usuario.telefono=Phone
 usuario.total=Total Users
 usuario.username=User
+producto.rutaImagen=image path
